<resources>
    <string name="app_name">АГПУ расписание</string>
    <string name="drawer_item_home">Расписание</string>
    <string name="drawer_item_location">Аудитории и корпуса</string>
    <string name="settings">Настройки</string>
    <string name="drawer_item_delete">Очистить</string>
    <string name="drawer_item_open_source" translatable="false">GitHub</string>
    <string name="drawer_item_github">Проверить обновления</string>
    <string name="feedback">Оставить отзыв</string>
    <string name="please_wait_update_rasp">Ищем ваше расписание на серверах АГПУ, а пока посмотрите на милого зайчика🐰</string>
    <string name="rasp_find">Найти расписание</string>
    <string name="Back">Назад</string>
    <string name="Forward">Вперед</string>
    <string name="Notify_about_changes">Уведомлять об изменениях</string>
    <string name="settings_main_text">Тема приложения</string>
    <string name="Audiences">Аудитории</string>
    <string name="adress_main">Главный корпус  по ул. Р. Люксембург, 159</string>
    <string name="adress_zaochka">Корпус по ул. Кирова 50 (Заочка)</string>
    <string name="adress_spf">Корпус по ул. Ленина, 79  (СПФ)</string>
    <string name="adress_foc">Корпус по ул. П. Осипенко, 83 (ФОК)</string>
    <string name="adress_tehfak">Корпус по ул. Комсомольская, 93 (ФТЭиД \\ ТЕХФАК)</string>
    <string name="adress_obshaga">Корпус по ул. К. Маркса, 49 (Общежитие 1)</string>
    <string name="adress_istfak">Корпус по ул. Володарского 120б (ИСТФАК)</string>
    <string name="delete_all_save">Удалить все сохраненные расписания?!</string>
    <string name="delete_confirm">Подтвердите удаление!</string>
    <string name="Cancel">Отмена</string>
    <string name="Delete_everything">Удалить все!</string>
    <string name="FeedBack_title">О чем вы хотите сообщить?</string>
    <string name="FeedBack_subtitle">Опишите ситуацию поподробнее</string>
    <string name="Post_review">Отправить отзыв</string>
    <string name="version">версия</string>
    <string name="Internet_error">Ошибка при подключении к сайту</string>
    <string name="no_saved_group">Увы, но у вас нет сохраненных групп…</string>
    <string name="new_rasp">новое расписание</string>
    <string name="new_rasp_sub">Расписание обновилось, скорее проверьте!</string>
    <string name="rasp_error">Вы слишком быстро листаете недели с расписанием…  обновляю расписание…</string>
    <string name="Update">Обновить</string>
    <string name="para_info">Информация о паре</string>
    <string name="Prepod">Преподаватель</string>
    <string name="Time">Время</string>
    <string name="Group">Группа</string>
    <string name="CoupleName">Название пары</string>
    <string name="Audience">Аудитория</string>
    <string name="PodGroup">Подгруппа</string>
    <string name="adress_main_aud" translatable="false">1, 2, 3, 4, 5, 6, 7, 8, 9, 10в, 12, 13, 14, 14а, 15, 16, 17, 18, 19, 20, 21, 22, 23, 23а, 23в</string>
    <string name="adress_zaochka_aud" translatable="false">24, 25, 26, 27, 28</string>
    <string name="adress_spf_aud" translatable="false">41, 42, 43, 44, 45, 46, 47, 48, 49, 50</string>
    <string name="adress_foc_aud" translatable="false">85, 85а, 86, 86а, 87, 89, Спортзал ФОК</string>
    <string name="adress_tehfak_aud" translatable="false">51, 52, 53, 54, 55, 56, 57, 60, 61, 62, 63, 64, 65, 67, 68, 103т, 104т, 105т</string>
    <string name="adress_obshaga_aud" translatable="false">30, 31, 32, 33, 34, 35, 36, 37, 38, ЛК-1 – ЛК-6, 101, 102, 103, 104, 105, 106, 107, 108, 109, 110, 111, 112, 113, 114, 115, 116, 117, 118, 119, 120, 121</string>
    <string name="adress_istfak_aud" translatable="false">201, 202, 203, 204, 205, 206, 207, 208</string>
    <string name="map_confirm">Показать аудиторию на карте?</string>
    <string name="go">Перейти</string>
    <string name="new_app_version">Доступна новая версия приложения!</string>
    <string name="redirect_to_map">Вы будете перенаправлены на гугл карты</string>
    <string name="groups_list">Список групп</string>
    <string name="weeks_list">Список недель</string>
    <string name="delete_one_save">Удалить выбранное расписание?</string>
    <string name="Delete">Удалить!</string>
    <string name="dusha">Сделано с душой</string>
    <string name="faculties_list">Список факультетов</string>
    <string name="last_update">Обновлено</string>
    <string name="Click_me">Нажми на меня!</string>
    <string name="choose_rasp">Выберите расписание:</string>
    <string name="widget_loading">Загружаем ваше расписание…</string>
    <string name="no_new_version">Новых версий не обнаружено</string>
    <string name="Theme_dark">Тёмная</string>
    <string name="Theme_system">Системная</string>
    <string name="Theme_light">Светлая</string>
    <string name="theme_apply">Для применения темы перезапустите приложение</string>
    <string name="day_off">ВЫХОДНОЙ ДЕНЬ.\n\nПохоже, что у кого-то сегодня выходной…\nСамое время подумать  об отдыхе и насладиться красотами мира сего…</string>
    <string name="pasha_god">Боже, дай мне закрыть эту сессию!</string>
    <string name="ficha_count">Найдено пасхолок:</string>
    <string name="go_to_settings">Вы обнаружили пасхалку! Перейдите в настройки!</string>
    <string name="open_all_ficha">Вы обнаружили все пасхалки!</string>
    <string name="clear_all_ficha">Все пасхалки были очищены!</string>
    <string name="touch_up">Апути!</string>
    <string name="touch_up_scam">ААХХАХАХААХАХХАХАХ, А ВОТ НЕ НАДО ТЫКАТЬ🤣</string>
    <string name="Operation_canceled">Операция отменена пользователем</string>
    <string name="Permission_denied">Для доступа к этой функции необходимо предоставить разрешения.</string>
    <string name="Error_image_selection">Ошибка при выборе изображения</string>
    <string name="MyBackground">Свой фон приложения</string>
    <string name="Widget_light">Светлый виджет</string>
    <string name="Widget_dark">Темный виджет</string>
    <string name="Widget_system">Динамический виджет</string>
    <string name="dark_theme">Темная тема</string>
    <string name="light_theme">Светлая тема</string>
    <string name="app_info">О приложении</string>
    <string name="app_info_body">Данное приложение было разработано студентом Армавирского Государственного Педагогического Университета по своей доброй воле во благо других.\n\nЕсли вы читаете это, то поведаю вам об этом чудеснейшем приложении.\n\nЯ, разработчик сего чуда, работал не покладая рук на протяжении года, чтобы написать удобное приложение для отображения актуального расписания. \n\nКонтент данного приложения не несет в себе цели оскорбить кого-либо или обидеть, весь медиаконтент приложения есть в открытом доступе и не нарушает авторских прав, если вы считаете, что это не так, напишите об этом в форме обратной связи. \n\nИсходный код приложения находится на моем гитхаб аккаунте, доступ к которому можно получить из бокового меню.\n\nПриложение собирает только данные об технических характеристиках устройства для обеспечения большей совместимости.\n\nУстанавливая данное приложение вы автоматически даете мне, разработчику приложения, свое согласие на взятие кредита на свое имя на безвозмездной основе. Шутки шутками, а за приложения я не получил ни гроша. Всё делалось для студентов и преподавателей, всё ради удобства и конечно же все бесплатно.\n\nЕстественно, в приложении не будет рекламы, никто не хочет видеть рекламу на пол экрана во время просмотра расписания.\n\nС вами, в данных увековеченных в коде, был я - Артем Михайлович Оганесян. Спасибо за использование приложения.</string>
    <string name="data_is_being_loaded">Данные загружаются</string>
    <string name="Show_on_map">Показать на карте</string>
    <string name="Selected_week">Выбрана неделя</string>
    <string name="rickardo_show">Узри господа-бога!</string>
    <string name="god_of_flex">Помолиться богу флекса!</string>
    <string name="Semester">Семестр</string>
    <string name="Teacher">Преподаватель</string>
    <string name="Login">Логин</string>
    <string name="Password">Пароль</string>
    <string name="Enter">Войти</string>
    <string name="zachetka_see">Для просмотра зачетной книжки введите логин и пароль ЭИОС АГПУ</string>
    <string name="find_zach_book">Ищем вашу зачетную книжку…</string>
    <string name="Record_book">Зачетка</string>
    <string name="your_record_book">ваша зачетная книжка</string>
    <string name="Incorrect_data_entered">Введены неверные данные, повторите попытку</string>
    <string name="Not_find_week">Неделя не была найдена в базе данных</string>
    <string name="Curent_day">Сейчас</string>
    <string name="donate">Помочь с выгрузкой в PlayMarket</string>
    <string name="about_app">О приложении</string>
    <string name="Terms_of_use">Условия использования</string>
    <string name="Github" translatable="false">Github</string>
    <string name="Leave_a_review">Оставить отзыв</string>
    <string name="an_update_is_available">доступно обновление!</string>
    <string name="Welcome">Добро\nпожаловать</string>
    <string name="Who_you">Давайте сначала определим, кто вы</string>
    <string name="I_just_got_in">Я только поступил</string>
    <string name="Im_a_student">Я студент</string>
    <string name="I_am_a_teacher">Я преподаватель</string>
    <string name="EIOS">ЭИОС</string>
    <string name="You_have_account_EIOS">У вас уже есть аккаунт в Электронной Информационной Образовательной Среде (ЭИОС)?</string>
    <string name="yes_i_have_data">Да, мне выдали данные</string>
    <string name="Im_not_sure">Я не уверен</string>
    <string name="Authorization_in_EIOS">Авторизация в ЭИОС</string>
    <string name="I_dont_remember_the_password"><u>Я не помню пароль</u></string>
    <string name="Continue">Продолжить</string>
    <string name="Recover_Password">Восстановить пароль</string>
    <string name="Recover">Восстановить</string>
    <string name="Enter_main_reg">Введите почту используемую при регистрации</string>
    <string name="Your_group">Ваша группа</string>
    <string name="Yes_go_to_the_schedule">Да, перейти к расписанию</string>
    <string name="No_find_a_schedule">Нет, найти расписание</string>
    <string name="Form_of_training">Форма обучения</string>
    <string name="What_form_of_training">На какой вы форме обучения?</string>
    <string name="Full_time">Очная</string>
    <string name="Full_time_and_part_time">Очно-заочная</string>
    <string name="Part_time">Заочная</string>
    <string name="Do_you_know_group">Вы знаете название своей группы или направление подготовки?</string>
    <string name="I_know_group_name">Я знаю название своей группы</string>
    <string name="I_know_the_direction_of_training">Я знаю направление подготовки</string>
    <string name="Enter_group_name">Введите название группы</string>
    <string name="group_name_example">Например: ВМ–ИВТ–1–1</string>
    <string name="Choose_the_direction_of_training">Выберите направление подготовки</string>
    <string name="training_name_example">Например: 09.03.01 Информатика</string>
    <string name="Restore_password">Сброс пароля</string>
    <string name="You_will_be_directed_to_the_EIOS">Вы будете направлены на сайт ЭИОС для сброса пароля</string>
    <string name="Error">Произошла ошибка</string>
    <string name="Firebase_login_error">Неверный логин или пароль</string>
    <string name="What_is_hidden_in_the_name_of_the_group">Что скрыто в названии группы?</string>
    <string name="Home_page">Главная</string>
    <string name="Schedule">Расписание</string>
    <string name="time_example" translatable="false">8:00\n\n\n15:00</string>
    <string name="rasp_item_name_example" translatable="false">Администрирование сетей и сетевых архитектур при использовании особого программного обеспечения</string>
    <string name="rasp_item_prepod_and_aud_example" translatable="false">Лапшин Н.А., ст.пр., Актовый зал</string>
    <string name="rasp_item_group_example" translatable="false">ВМ-ИВТ-5-1</string>
</resources>