<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/zachetka_relative_layout"
    android:theme="@style/Theme.MyApp.Main"
    android:background="@drawable/background_light">

    <RelativeLayout
        android:id="@+id/background_darker"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_darker">
        <TextView
            android:id="@+id/zachetka_main_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_centerHorizontal="true"
            android:textAlignment="center"
            android:text="@string/zachetka_see"
            android:textSize="24sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="50dp"
            android:visibility="invisible"
            android:layout_below="@id/spinner"
            />
        <TextView
            android:id="@+id/selection"
            android:text="@string/Semester"
            android:layout_width="wrap_content"
            android:visibility="invisible"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/zachetka_main_text"
            android:textSize="16sp">
        </TextView>
        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/selection"
            android:visibility="invisible"
            android:layout_below="@id/zachetka_main_text"
            android:layout_centerHorizontal="true"/>

        <EditText
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:padding="20dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/zachetka_main_text"
            android:layout_centerHorizontal="true"

            android:hint="@string/Login" />
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:padding="20dp"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:layout_below="@id/login"
            android:layout_centerHorizontal="true"

            android:hint="@string/Password"/>

        <Button
            android:id="@+id/login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Enter"
            android:layout_below="@id/password"
            android:layout_centerHorizontal="true"
            android:padding="20dp" />


    </RelativeLayout>
</RelativeLayout>