<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_activity_start_layout"
    android:background="@drawable/background_light">

    <TextView
        android:id="@+id/main_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="30dp"
        android:layout_marginStart="12dp"
        android:text="@string/Form_of_training"
        android:textAppearance="@style/text_h2_style"
        android:lineSpacingExtra="9sp"
        />

    <TextView
        android:id="@+id/second_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_text"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        android:gravity="center_horizontal|top"
        android:lineSpacingExtra="4sp"
        android:text="@string/What_form_of_training"
        android:textAppearance="@style/text_style"
        android:translationY="-2.25sp" />

    <!-- Buttons -->
    <RelativeLayout
        android:id="@+id/Full_time_btn"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_below="@id/second_text"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_blue_invert"
        android:padding="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/Full_time"
            android:textAppearance="@style/text_style_caps"
            />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/Part_time_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:padding="20dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/button_blue_invert"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/Full_time_btn">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textColor="@color/black"
            android:textAppearance="@style/text_style_caps"
            android:text="@string/Part_time"
            />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/Full_time_and_part_time_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:padding="20dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/button_blue_invert"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/Part_time_btn">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textColor="@color/black"
            android:textAppearance="@style/text_style_caps"
            android:text="@string/Full_time_and_part_time"
            />
    </RelativeLayout>
</RelativeLayout>