<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/time_range"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_example"
        android:textAlignment="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginBottom="10dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        />

    <ImageView
        android:id="@+id/separator"
        android:layout_width="4dp"
        android:layout_height="match_parent"
        android:layout_toEndOf="@id/time_range"
        android:layout_alignTop="@id/time_range"
        android:layout_alignBottom="@id/time_range"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        android:src="@drawable/widget_gv_separator_background" />


    <RelativeLayout
        android:id="@+id/background_relative"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@color/black"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@id/separator"
        android:layout_alignTop="@id/time_range"
        android:layout_alignBottom="@id/time_range"
        >


        <TextView
            android:id="@+id/item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rasp_item_name_example"
            android:textSize="16sp"
            android:maxLines="2"
            android:ellipsize="end"
            android:singleLine="false"/>

        <TextView
            android:id="@+id/item_prepod_and_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rasp_item_prepod_and_aud_example"
            android:textSize="16sp"
            android:ellipsize="end"
            android:singleLine="true"
            android:layout_below="@id/item_name"/>

        <TextView
            android:id="@+id/item_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rasp_item_group_example"
            android:textSize="16sp"
            android:ellipsize="end"
            android:singleLine="true"
            android:layout_below="@id/item_prepod_and_time"/>


    </RelativeLayout>

</RelativeLayout>