<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_activity_start_layout"
    android:background="@drawable/background_light">

    <!-- Добро пожаловать -->
    <TextView
        android:id="@+id/main_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="150dp"
        android:text="@string/Welcome"
        android:textAppearance="@style/text_h2_style"
        android:lineSpacingExtra="9sp"
        android:gravity="center_horizontal|top"
        />

    <!-- Давайте сначала определим, кто вы -->
    <TextView
        android:id="@+id/second_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_text"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        android:gravity="center_horizontal|top"
        android:lineSpacingExtra="4sp"
        android:text="@string/Who_you"
        android:textAppearance="@style/text_style"
        android:translationY="-2.25sp" />

    <!-- Buttons -->
    <RelativeLayout
        android:id="@+id/I_just_got_in_btn"
        android:layout_marginTop="100dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_below="@id/second_text"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_blue"
        android:padding="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content"
            android:text="@string/I_just_got_in"
            android:textAppearance="@style/text_style_caps"
            android:textColor="@color/gold" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/Im_a_student_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:padding="20dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/button_blue"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/I_just_got_in_btn">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textAppearance="@style/text_style_caps"
            android:textColor="@color/gold"
            android:text="@string/Im_a_student"
            />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/I_am_a_teacher_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:padding="20dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/button_blue_invert"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/Im_a_student_btn">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textAppearance="@style/text_style_caps"
            android:textColor="@color/primary_btn"
            android:text="@string/I_am_a_teacher"
            />
    </RelativeLayout>
</RelativeLayout>